# aigl

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  colors.py  index.html  style.css
.github/workflows/: ci.yml  release.yml
brainstorming/: project_per_bot_teams.json  project_shared_ffa.json
crates/aigi/: Cargo.toml
crates/aigi/src/: config.rs  main.rs  project.rs
crates/aigi_app/: Cargo.toml
crates/aigi_app/src/: lib.rs
crates/aigi_app/src/components/: buttons.rs  mod.rs  navbar.rs
crates/aigi_app/src/theme/: color.rs  mod.rs  radix.rs  theme.rs  theme_struct.rs
crates/aigi_git/: Cargo.toml
crates/aigi_git/src/: lib.rs  repo.rs
crates/aigi_git/tests/: init_and_commit.rs
crates/aigi_python/: Cargo.toml
crates/aigi_python/src/: cache.rs  lib.rs  settings.rs  venv.rs
crates/aigi_system/: Cargo.toml
crates/aigi_system/src/: fs.rs
crates/aigi_templates/: Cargo.toml
crates/aigi_templates/src/: filters.rs  fs.rs  lib.rs  render.rs
crates/aigi_templates/tests/: .gitignore  render_bot_template.rs
crates/aigi_templates/tests/test_bot_template/: pyproject.toml.jinja
crates/aigi_templates/tests/test_bot_template/src/{{player_name}}/: __init__.py.jinja
crates/aigl/: Cargo.toml
crates/aigl/src/: config.rs  main.rs  project.rs
crates/aigl_app/: Cargo.toml
crates/aigl_app/src/: app.rs  game_config.rs  install.rs  lib.rs
crates/aigl_app/src/components/: input.rs  mod.rs  navbar.rs  text.rs  text_input.rs
crates/aigl_app/src/theme/: color.rs  theme_struct.rs
crates/aigl_git/: Cargo.toml
crates/aigl_git/src/: repo.rs
crates/aigl_git/tests/: init_and_commit.rs
crates/aigl_project/: Cargo.toml
crates/aigl_project/src/: bot.rs  bot_colors.rs  bot_names.rs  config.rs  lib.rs  project.rs  unique_selection.rs
crates/aigl_python/: Cargo.toml
crates/aigl_python/src/: cache.rs  install.rs  lib.rs  venv.rs
crates/aigl_system/: Cargo.toml
crates/aigl_system/src/: fs.rs  lib.rs
crates/aigl_template/: Cargo.toml
crates/aigl_template/src/: render.rs
crates/aigl_template/tests/: .gitignore  render_bot_template.rs
crates/aigl_template/tests/test_bot_template/: .gitignore
crates/aigl_templates/tests/: render_bot_template.rs
crates/aigl_templates/tests/test_bot_template/: pyproject.toml.jinja
crates/game_installer/: Cargo.toml
crates/game_installer/src/: install_app.rs  theme.rs
crates/game_installer/src/components/: mod.rs  navbar.rs  widget.rs
crates/game_installer_theme/: Cargo.toml
crates/game_installer_theme/src/: color.rs  lib.rs  radix.rs  theme.rs
resources/: test_game.toml
resources/games/: dmsc-sss25.toml  supremacy.toml  test_game.toml
resources/themes/: radix.ron
src/: game_config.rs  install_app.rs  main.rs  theme.rs
src/components/: buttons.rs  mod.rs
website/: index.html  script.js  style.css
