[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
homepage = "https://github.com/jl-wynen/game-installer"
repository = "https://github.com/jl-wynen/game-installer"
authors = ["Jan-Lukas Wynen"]
license = "MIT"

[workspace.dependencies]
eframe = { version = "0.31", features = ["default"] }
egui-phosphor = "0.9"
pretty_assertions = "1.4"
rfd = "0.15"
ron = "0.8"
serde = "1.0"
serde_derive = "1.0"

[profile.release]
# Options chosen to reduce binary size.
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
