[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.86"
homepage = "https://github.com/jl-wynen/game-installer"
repository = "https://github.com/jl-wynen/game-installer"
authors = ["Jan-Lukas Wynen"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
cachedir = "0.3"
eframe = { version = "0.31", features = ["default"] }
egui-phosphor = "0.9"
git2 = { version = "0.20", features = ["vendored-libgit2"] }
git2_credentials = "0.15"
lazy_static = "1.5.0"
minijinja = "2.8"
pretty_assertions = "1.4"
rand = "0.9"
rfd = "0.15"
ron = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
# Copied from uv
tokio = { version = "1.40.0", features = ["fs", "io-util", "macros", "process", "rt", "signal", "sync"] }
toml_edit = { version = "0.22", features = ["serde"] }
tracing = { version = "0.1" }

uv = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }
uv-cache = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }
uv-client = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }
uv-configuration = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }
uv-distribution-types = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }
uv-install-wheel = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }
uv-normalize = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }
uv-python = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }
uv-requirements = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }
uv-resolver = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }
uv-settings = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }
uv-virtualenv = { git = "https://github.com/jl-wynen/uv-pub/", branch = "0.6.14" }

[profile.release]
# Options chosen to reduce binary size.
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
