[package]
name = "aigi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aigi_app = { path = "../aigi_app" }
aigi_git = { path = "../aigi_git" }

lazy_static = { workspace = true }

[features]
load-theme = [
    "aigi_app/load-theme",
]
