[package]
name = "aigi_app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
eframe = { workspace = true }
egui-phosphor = { workspace = true }
lazy_static = { workspace = true, optional = true }
rfd = { workspace = true }
ron = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
load-theme = [
    "dep:lazy_static", "dep:ron", "dep:serde", "dep:serde_derive",
]
