[package]
name = "aigl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aigl_app = { path = "../aigl_app" }
aigl_git = { path = "../aigl_git" }
aigl_python = { path = "../aigl_python" }

anyhow = { workspace = true }
cachedir = { workspace = true }
tokio = { workspace = true }

[features]
load-theme = [
    "aigl_app/load-theme",
]
