[package]
name = "aigl_git"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
git2 = { workspace = true }
git2_credentials = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
