[package]
name = "aigl_project"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aigl_git = { path = "../aigl_git" }
aigl_python = { path = "../aigl_python" }
aigl_system = { path = "../aigl_system" }

anyhow = { workspace = true }
cachedir = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
