[package]
name = "game-installer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
eframe = { workspace = true }
egui-phosphor = { workspace = true }
rfd = { workspace = true }
