[package]
name = "game-installer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
game_installer_theme = { path = "../game_installer_theme" }

eframe = { workspace = true }
egui-phosphor = { workspace = true }
rfd = { workspace = true }

[features]
load-theme = [
    "game_installer_theme/load",
]
